--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+		<link
+			rel="stylesheet"
+			href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.0.0/build/styles/rainbow.min.css"
+		/>
 		<title><%= htmlWebpackPlugin.options.title %></title>
 	</head>
 	<body>
@@ -16,5 +20,10 @@
 		</noscript>
 		<div id="app"></div>
 		<!-- built files will be auto injected -->
+
+		<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.0.0/build/highlight.min.js"></script>
+		<script>
+			hljs.highlightAll();
+		</script>
 	</body>
 </html>
