feat:增加文章样式

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 		<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 		<link
 			rel="stylesheet"
-			href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.0.0/build/styles/rainbow.min.css"
+			href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.0.0/build/styles/base16/github.min.css"
 		/>
 		<title><%= htmlWebpackPlugin.options.title %></title>
 	</head>
@@ -22,8 +22,5 @@
 		<!-- built files will be auto injected -->
 
 		<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.0.0/build/highlight.min.js"></script>
-		<script>
-			hljs.highlightAll();
-		</script>
 	</body>
 </html>
