--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -10,7 +10,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-		<title>Document</title>
+		<title>MyBlog</title>
 	</head>
 	<body>
 		<div id="app"></div>
