feat: 新增顶部栏和主页

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html lang="zh">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"
-		/>
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta http-equiv="Cache-Control" content="no-siteapp" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-		<title>MyBlog</title>
-	</head>
-	<body>
-		<div id="app"></div>
-	</body>
+<html lang="zh-cn">
+  <head>
+    <meta charset="utf-8">
+    <!-- IE使用最高级模式渲染，或者chrome frame渲染 -->
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <!-- ie标准内核 -->
+    <meta name="renderer" content="ie-stand">
+    <!-- 网站描述 -->
+    <meta name="description" content="xx" />
+    <title>MyBlog</title>
+    <!-- DNS预解析 -->
+    <link rel="dns-prefetch" href="">
+  </head>
+  <body>
+    <noscript>
+      <strong>We're sorry but ins.h5 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app">
+    </div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
